--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-documents/picker": "^10.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
@@ -19,7 +20,6 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "react": "19.0.0",
     "react-native": "0.79.1",
-    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
