--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-native-documents/picker": "^10.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -24,7 +25,6 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-keychain": "^10.0.0",
-    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
