--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@tanstack/react-query": "^5.75.1",
+    "i18next": "^25.1.2",
+    "i18next-react-native-language-detector": "^1.0.2",
     "react": "19.0.0",
+    "react-i18next": "^15.5.1",
     "react-native": "0.79.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.1",
